...
                            </tableView>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XJ9-kk-gu9">
                                <rect key="frame" x="0.0" y="518" width="320" height="50"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p9y-YT-hf0">
                                        <rect key="frame" x="111.5" y="7" width="97" height="36"/>
                                        <accessibility key="accessibilityConfiguration" identifier="btoExperience"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                        <state key="normal" title="Experience"/>
                                        <connections>
                                            <segue destination="8rJ-Kc-sve" kind="show" id="EZs-BJ-Tg7"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" white="1" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
