...
    static let topPadding: CGFloat = 20.0
    static let bottomPadding: CGFloat = -8.0
}

//MARK: - Accessesiblity identifiers
enum AccessIdentifiers: String {
    case informationImageView = "imagePerfil"
}

//MARK: - Strings for fatal errors
enum FatalError: String {
    case tableViewNotCreated = "The table view is not created from interface file"
}
...
